kubernetes/service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: my-np
# spec:
#   selector:
#     app: sample-app
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: API  # API is the port of the container
#       nodePort: 30000
#   type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: my-lb
spec:
  selector:
    app: sample-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: API # API is the port of the container
  type: LoadBalancer
